ingress/ingress-test/app1-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: app1
  namespace: nginx

spec:
  replicas: 2
  selector: 
    matchLabels:
      app: app1

  template:
    metadata:
      labels:
        app: app1

    spec:
      containers:
      - name: app1
        image:  hashicorp/http-echo
        args: 
        - "-text=Hello from APP1"

        ports:
        - containerPort: 5678
