ingress/ingress-test/app2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: nginx

spec:
  replicas: 2

  selector:
    matchLabels:
      app: app2


  template:
    metadata:
      labels:
        app: app2

    spec:
      containers:
      - name: app2
        image: hashicorp/http-echo
        args:
        - "-text=Hello from APP2"

        ports:
        - containerPort: 5678
