ingress/ingress-test/app1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: nginx

spec:
  selector:
    app: app1


  ports:
  - port: 80
    targetPort: 5678
